--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -80,7 +80,7 @@ input {
   width: 95%;
   height: 25px;
   text-align: left;
-  padding: 10px;
+  padding: 3%;
   border: 1px solid;
   background-color: #f2f2f2;
 }
