--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -159,3 +159,84 @@ button.savebutton {
   display: normal;
 }
 
+
+/*******************************************
+   Style for password page
+*******************************************/
+.pwdButton {
+	-moz-box-shadow:inset 0px 0px 14px -3px #f2fadc;
+	-webkit-box-shadow:inset 0px 0px 14px -3px #f2fadc;
+	box-shadow:inset 0px 0px 14px -3px #f2fadc;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #dbe6c4), color-stop(1, #9ba892));
+	background:-moz-linear-gradient(top, #dbe6c4 5%, #9ba892 100%);
+	background:-webkit-linear-gradient(top, #dbe6c4 5%, #9ba892 100%);
+	background:-o-linear-gradient(top, #dbe6c4 5%, #9ba892 100%);
+	background:-ms-linear-gradient(top, #dbe6c4 5%, #9ba892 100%);
+	background:linear-gradient(to bottom, #dbe6c4 5%, #9ba892 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dbe6c4', endColorstr='#9ba892',GradientType=0);
+	background-color:#dbe6c4;
+	-moz-border-radius:10px;
+	-webkit-border-radius:10px;
+	border-radius:10px;
+	border:1px solid #b2b8ad;
+	display:inline-block;
+	cursor:pointer;
+	color:#1e1f1d;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:20px 24px;
+	text-decoration:none;
+  width:80%;
+}
+.pwdButton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #9ba892), color-stop(1, #dbe6c4));
+	background:-moz-linear-gradient(top, #9ba892 5%, #dbe6c4 100%);
+	background:-webkit-linear-gradient(top, #9ba892 5%, #dbe6c4 100%);
+	background:-o-linear-gradient(top, #9ba892 5%, #dbe6c4 100%);
+	background:-ms-linear-gradient(top, #9ba892 5%, #dbe6c4 100%);
+	background:linear-gradient(to bottom, #9ba892 5%, #dbe6c4 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#9ba892', endColorstr='#dbe6c4',GradientType=0);
+	background-color:#9ba892;
+}
+.pwdButton:active {
+	position:relative;
+	top:1px;
+}
+
+.pwdKeypad {
+  margin-top: 70px;
+  margin-bottom: 50px;
+  margin-left: 10%;
+  margin-right: 10%;
+  padding: 16px;
+  border: 1px solid #bbbbbb;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.pwdTable {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 80%;
+  text-align: center;
+  margin: 0px auto;
+  table-layout: fixed;
+}
+
+.pwdCode {
+  vertical-align: middle;
+  margin: 10px auto;  
+  margin-bottom: 25px;
+  padding:5px;
+  border: 2px solid #555555;
+  border-radius: 8px;
+  width: 50%;
+  text-align: center;
+	font-family:Arial;
+	font-size:40px;
+	font-weight:bold;
+}
+
+
+
