--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -185,9 +185,10 @@ button.savebutton {
   font-family:Arial;
   font-size:15px;
   font-weight:bold;
-  padding:20px 24px;
-  text-decoration:none;
-  width:80%;
+	padding-top:20px;
+	padding-bottom:20px;
+	text-decoration:none;
+  width:85%;
 }
 .pwdButton:hover {
   background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #9ba892), color-stop(1, #dbe6c4));
