--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -3,7 +3,7 @@
 *******************************************/
 body {
   background-color: white;
-  background-image: url("background.jpg");
+  background-image: url("img/background.jpg");
   color: black;
 }
 
